--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 :root {
-  --color-light-10: #FFFFFF;
+  --color-light-10: #ffffff;
   --color-light-20: #f4f4f4;
-  --color-light-30: #DDDDDD;
+  --color-light-30: #dddddd;
   --color-gray: #555555;
   --color-dark-gray: #333;
   --color-transparent: rgba(0, 0, 0, 0.1);
+  --color-error: rgb(212, 51, 51);
 
   --shadow: 0 0 10px;
 }
-
 
 * {
   margin: 0;
@@ -23,6 +23,11 @@ ol {
   list-style: none;
 }
 
+a,
+button {
+  transition-duration: 0.2s;
+}
+
 body {
   background-color: var(--color-light-20);
 }
@@ -34,7 +39,13 @@ a[class] {
 
 .container {
   display: flex;
-  min-height: calc(100vh - 120px); /* Adjust based on header and footer height */
+  min-height: calc(
+    100vh - 120px
+  ); /* Adjust based on header and footer height */
   margin: 1rem;
   gap: 1rem;
+}
+
+.center {
+  justify-content: center;
 }
