--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
   --color-transparent: rgba(0, 0, 0, 0.1);
   --color-error: rgb(212, 51, 51);
 
+  --color-danger: #d9534f;
+  --color-danger-hover: #c9302c;
+  
+  --border: 1px solid var(--color-light-30);
+
   --shadow: 0 0 10px;
 }
 
