--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,21 @@
   --color-light-10: #ffffff;
   --color-light-20: #f4f4f4;
   --color-light-30: #dddddd;
+  --color-light-40: #f9f9f9;
   --color-gray: #555555;
   --color-dark-gray: #333;
   --color-transparent: rgba(0, 0, 0, 0.1);
   --color-error: rgb(212, 51, 51);
 
+  --color-green: #5cb85c;
+  --color-green-hover: #4cae4c;
+
   --color-danger: #d9534f;
   --color-danger-hover: #c9302c;
   
   --border: 1px solid var(--color-light-30);
+
+  --transition-duration: 0.2s;
 
   --shadow: 0 0 10px;
 }
