--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  cursor: pointer;
   background-color: var(--color-light-10);
   min-width: 300px;
   padding: 1rem;
@@ -17,7 +18,7 @@
   border-radius: 5px;
 }
 
-.title {
+.name {
   margin: 0.5rem 0;
   font-size: 1.1rem;
 }
